Add basic pick and ban functionality

--- a/picker/templates/picker/index.html
+++ b/picker/templates/picker/index.html
@@ -1,1 +1,8 @@
-Hello World!
+{% extends "picker/base.html" %}
+{% block content %}
+<h1>Keinhosen's Pick-and-Banner</h1>
+
+<ul>
+  <li><a href="{% url 'new-game-view' %}">Create a new game!</a></li>
+</div>
+{% endblock content %}
