Moved hideseek.js

--- a/picker/templates/picker/game_detail.html
+++ b/picker/templates/picker/game_detail.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block extra_head %}
-<script src="{% static 'picker/js/hideseek/jquery.hideseek.min.js' %}"></script>
+<script src="{% static 'picker/js/jquery.hideseek.min.js' %}"></script>
 <script src="{% static 'picker/js/picker.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'picker/style.css' %}" />
 {% endblock extra_head %}
