Add pick timeouts

--- a/picker/templates/picker/game_detail.html
+++ b/picker/templates/picker/game_detail.html
@@ -10,6 +10,12 @@
 {% block content %}
 <h1> Game </h1>
 
+{% if user.is_staff or user == game.blueTeam.captain or user == game.redTeam.captain %}
+  {% if not game.started %}
+<input id="start-game" type="button" value="Start game!" />
+  {% endif %}
+{% endif %}
+
 
 <div id="container">
   <div class="sidebar">
