Add basic login form

--- a/picker/templates/picker/game_detail.html
+++ b/picker/templates/picker/game_detail.html
@@ -1,6 +1,8 @@
 {% extends "picker/base.html" %}
 {% load staticfiles %}
 
+{% block title %}Picker{% endblock %}
+
 {% block extra_head %}
 <script src="{% static 'picker/js/jquery.hideseek.min.js' %}"></script>
 <script src="{% static 'picker/js/picker.js' %}"></script>
