--- a/picker/templates/picker/base.html
+++ b/picker/templates/picker/base.html
@@ -2,10 +2,19 @@
 <html>
 {% load staticfiles %}
     <head>
+      <title>{% block title %} {% endblock title %}</title>
       <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+      <link rel="stylesheet" type="text/css" href="{% static 'picker/base.css' %}" />
       {% block extra_head %}{% endblock extra_head %}
     </head>
     <body>
+      <div id="navbar">
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+      </div>
       {% block content %}{% endblock content %}
     </body>
 </html>
