Move images to local storage

--- a/picker/templates/picker/game_detail.html
+++ b/picker/templates/picker/game_detail.html
@@ -48,7 +48,7 @@
     <ul class="champion-list">
       {% for champ in champions %}
       <li class="champion" champion-id="{{ champ.lolID }}">
-        <img class="portrait" src="{{ champ.imageURL }}"/>
+        <img class="portrait" src="{% static champ.staticAlias %}"/>
         <div class="champion-name">{{ champ.name }}</div>
       </li>
       {% endfor %}
